--- a/UnitTests/Publisher.Test/Publisher.Test.csproj
+++ b/UnitTests/Publisher.Test/Publisher.Test.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="MessageConstructorTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="BootstrapperTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Source\Publisher\Publisher.csproj">
@@ -59,6 +60,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Moq">
+      <Version>4.13.1</Version>
+    </PackageReference>
     <PackageReference Include="MSTest.TestAdapter">
       <Version>1.3.2</Version>
     </PackageReference>
